# SoftwareTutorials

./: .pre-commit-config.yaml  README.md
DD4hepTutorials/: README.md
DD4hepTutorials/scripts/: readEdm4hep.cc
DD4hepTutorials/sdaction/src/: simplecaloSDAction.cpp
DD4hepTutorials/simplecalo1/compact/: simplecalo1.xml
DD4hepTutorials/simplecalo2/compact/: simplecalo2.xml
GaudiTutorial/IDEA_o2_drcalibration/: CMakeLists.txt
GaudiTutorial/IDEA_o2_drcalibration/options/: IDEA_o2_drcalibration.py
GaudiTutorial/IDEA_o2_drcalibration/src/components/: IDEA_o2_drcalibration.cpp
